<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/inicio"
            android:id="@+id/menu_inicio"
            android:icon="@drawable/home" />
        <item
            android:title="@string/mi_perfil"
            android:id="@+id/menu_perfil"
            android:icon="@drawable/perfil" />
        <item
            android:title="@string/configuracion"
            android:id="@+id/menu_configuracion"/>
        <item
            android:title="@string/productos"
            android:id="@+id/menu_productos"
            android:icon="@drawable/car_1" />
        <item
            android:title="@string/cerrar_sesion"
            android:id="@+id/menu_cerrar_sesion" />


    </group>

</menu>