<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Busqueda"
    android:background="@color/yellow">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="@color/main_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnNavInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_black"
                android:contentDescription="@string/inico"
                app:srcCompat="@drawable/home"
                app:tint="@color/white"
                />

            <ImageButton
                android:id="@+id/btnNavCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_black"
                android:contentDescription="@string/comprar"
                app:srcCompat="@drawable/car_1"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btnNavBusqueda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_black"
                android:contentDescription="@string/buscar"
                app:srcCompat="@drawable/search_1"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btnNavPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_black"
                android:contentDescription="@string/perfil"
                app:srcCompat="@drawable/perfil"
                app:tint="@color/white" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>